# saltwater-intrusion-mapping

./: .dockerignore  .env.local.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  choptank.out  codc_salinity_profiles.csv  dagster.yaml  dagster_gke.yaml  data_downloader.py  date_range.json  docker-compose.prod.yml  docker-compose.yml  download_tools.py  download_worker_log.txt  easternshore.geojson  environment.yml  local_run_config.yaml  pipeline_runner.py  pyproject.toml  requirements.txt  runner.py  salinity_tools.py  visualization_demo.ipynb  workspace.yaml  workspace_gke.yaml
config/: choptank_river_region.geojson  coastal_band.geojson  coastal_band.gpkg  codc_files.txt  codc_files_full.txt  processing_tasks.toml  somerset.geojson  somerset_val.geojson  validation.toml
deploy/: cloudbuild.pipeline.yaml  cloudbuild.trigger.yaml  deploy_cloud_run.sh  deploy_hyperparameter_search.sh  deploy_training.sh  policy.json
docker/: Dockerfile
docs/: TILE_BASED_DOWNLOAD.md  index.html  search.js  swmaps.html
examples/: cdl_farseg_finetune.toml  cdl_farseg_finetune_cloud.toml  cdl_panopticon_finetune.toml  cdl_panopticon_finetune_cloud.toml  choptank.conf  choptank.toml  choptank_segmentation.toml  choptank_skip_download.toml  coastal_poly.py  demo.conf  demo.toml  download_data.py  example_workflow.py  example_workflow_mod.py  fetch_overlays.py  generate_masks.py  landsat_salinity.py  quickstart_download_only.toml  quickstart_inference.toml  quickstart_salinity_only.toml  quickstart_train.toml  run_demo.sh  run_pipeline.py  (+5 more)
(+138 files in other folders)
