[project]
name = "swmaps"
version = "0.1.0"
dependencies = [
    "beautifulsoup4",
    "dagster",
    "dagster-k8s",
    "dagster-gcp[gcs]",
    "dask",
    "numpy",
    "pandas",
    "rasterio",
    "geopandas",
    "shapely",
    "xarray",
    "scikit-learn",
    "xgboost",
]

[tool.setuptools]
packages = ["swmaps"]
