[project]
name = "swmaps"
version = "0.1.1"
dependencies = [
    "albumentations",
    "dask",
    "fastapi",
    "flask",
    "earthengine-api",
    "httpx",
    "hypertune",
    "numpy",
    "pandas",
    "psycopg2",
    "rasterio",
    "geopandas",
    "google-cloud-run",
    "google-cloud-pubsub",
    "shapely",
    "xarray",
    "scikit-learn",
    "segmentation_models_pytorch",
    "tqdm",
    "uvicorn",
    "xgboost",
]

[tool.setuptools]
packages = { find = {} }
